--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build image to ghcr
 
 on:
   push:
@@ -47,18 +47,19 @@ jobs:
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2.0.0
         if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.0.0
         if: ( steps.filter.outputs.build == 'true' && github.event_name != 'pull_request' ) || ( github.event_name == 'release' && github.event.action == 'published' )
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v3.1.1
         if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
         with:
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+#          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
