--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -60,6 +60,6 @@ jobs:
         with:
 #          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           platforms: linux/amd64
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: gchr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
