--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,13 @@
 name: Build image to ghcr
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
-#    branches:
-#      - '*'
+    branches:
+      - '*'
     tags:
       - 'v*.*.*'
   pull_request:
@@ -13,6 +17,10 @@ on:
     types:
       - published
   workflow_dispatch:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
@@ -33,7 +41,7 @@ jobs:
         id: meta
         if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
         with:
-          images: mhaii/porn-scraper
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -46,12 +54,13 @@ jobs:
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2.0.0
         if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.0.0
         if: ( steps.filter.outputs.build == 'true' && github.event_name != 'pull_request' ) || ( github.event_name == 'release' && github.event.action == 'published' )
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v3.1.1
@@ -59,6 +68,6 @@ jobs:
         with:
 #          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           platforms: linux/amd64
-          tags: gchr.io/${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
