--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,11 +5,11 @@ permissions:
   packages: write
 
 on:
-  push:
-    branches:
-      - '*'
-    tags:
-      - 'v*.*.*'
+#  push:
+#    branches:
+#      - '*'
+#    tags:
+#      - 'v*.*.*'
   pull_request:
     branches:
       - '*'
@@ -66,7 +66,8 @@ jobs:
         uses: docker/build-push-action@v3.1.1
         if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
         with:
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
+#          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
