--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "porn-scraper"
 version = "1.0.0"
 description = ""
-authors = ["mhaii"]
+authors = ["mhaii <mhaii@pukenicorn.com>"]
 readme = "README.md"
 #packages = [{include = "app"}] # Not gonna build for dist
 
@@ -11,6 +11,13 @@ python = "^3.8"
 javscraper = "^1.1.8"
 fastapi = "^0.85.0"
 uvicorn = "^0.18.3"
+
+[tool.poetry.group.dev.dependencies]
+taskipy = "^1.10.3"
+
+# poetry run task xxxxx
+[tool.taskipy.tasks]
+generate = "python openapi/generate.py"
 
 
 [build-system]
