--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,8 +8,6 @@ on:
   push:
     branches:
       - main
-#    tags:
-#      - 'v*.*.*'
   pull_request:
     branches:
       - '*'
@@ -39,11 +37,12 @@ jobs:
       - name: Docker Metadata
         uses: docker/metadata-action@v4.0.1
         id: meta
-        if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
+        if: steps.filter.outputs.build == 'true' || (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'workflow_dispatch')
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=edge,branch=main
+            type=raw,value=edge,enable=${{ github.event_name == 'workflow_dispatch' }}
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
@@ -51,24 +50,24 @@ jobs:
             type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2.0.0
-        if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
+        if: steps.filter.outputs.build == 'true' || (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'workflow_dispatch')
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2.0.0
-        if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
+        if: steps.filter.outputs.build == 'true' || (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'workflow_dispatch')
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.0.0
-        if: ( steps.filter.outputs.build == 'true' && github.event_name != 'pull_request' ) || ( github.event_name == 'release' && github.event.action == 'published' )
+        if: (steps.filter.outputs.build == 'true' && github.event_name != 'pull_request') || (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'workflow_dispatch')
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v3.1.1
-        if: steps.filter.outputs.build == 'true' || ( github.event_name == 'release' && github.event.action == 'published' )
+        if: steps.filter.outputs.build == 'true' || (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'workflow_dispatch')
         with:
-          platforms: linux/amd64
 #          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
