--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.18.3"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.3"
+pyyaml = "^6.0"
 
 [tool.taskipy.tasks]
 # poetry run task xxxxx
