dont build docker image on pr, dont run dependabot on push main

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,8 +5,8 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches: [main]
+#  push:
+#    branches: [main]
   pull_request:
     branches: [main]
   workflow_dispatch:
