--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,25 @@ uvicorn = "^0.19.0"
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.3"
 pyyaml = "^6.0"
+openapi-generator-cli = "^4.3.1"
 
 [tool.taskipy.tasks]
 # poetry run task xxxxx
-generate = "python -m openapi.generate"
+"generate:spec" = "python -m openapi.generate"
+"generate:client-ts-axios" = """
+    openapi-generator generate \
+        -g typescript-axios \
+        --additional-properties=supportsES6=true \
+        -i ./openapi/openapi.yml \
+        -o ./generated/ts/axios
+    """
+"generate:client-ts-nestjs" = """
+    openapi-generator generate \
+        -g typescript-nestjs \
+        --additional-properties=serviceSuffix=ScraperService,supportsES6=true \
+        -i ./openapi/openapi.yml \
+        -o ./generated/ts/nestjs
+    """
 
 
 [build-system]
