--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,35 +7,24 @@ readme = "README.md"
 #packages = [{include = "app"}] # Not gonna build for dist
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 javscraper = "^1.1.8"
 fastapi = "^0.85.1"
 uvicorn = "^0.19.0"
-
-[tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.3"
 pyyaml = "^6.0"
+
+[tool.poetry.group.dev.dependencies]
+
+[tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
-openapi-generator-cli = "^4.3.1"
+
 
 [tool.taskipy.tasks]
 # poetry run task xxxxx
-"generate:spec" = "python -m openapi.generate"
-"generate:client-ts-axios" = """
-    openapi-generator generate \
-        -g typescript-axios \
-        --additional-properties=supportsES6=true \
-        -i ./openapi/openapi.yml \
-        -o ./generated/ts/axios
-    """
-"generate:client-ts-nestjs" = """
-    openapi-generator generate \
-        -g typescript-nestjs \
-        --additional-properties=serviceSuffix=ScraperService,supportsES6=true \
-        -i ./openapi/openapi.yml \
-        -o ./generated/ts/nestjs
-    """
-
+"generate:spec" = "python -m tasks.generate-spec"
+"generate:client-ts-axios" = "make genc-axios"
+"generate:client-ts-nestjs" = "make genc-nestjs"
 
 [build-system]
 requires = ["poetry-core"]
