refactor client generator to workflow

--- a/.github/workflows/on-publish.yml
+++ b/.github/workflows/on-publish.yml
@@ -9,12 +9,14 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push:
-    branches: [main]
   release:
     types: [published]
   workflow_dispatch:
-
+    inputs:
+      version:
+        description: Version to the publish package
+        type: string
+        required: true
 
 jobs:
   test:
@@ -41,9 +43,9 @@ jobs:
       base-language: python
       package-language: node
       package-language-cache: none
-      package-path: ./generated/typescript
-      post-setup-command: generate:client-ts-axios
+      package-path: ./generated
+      post-setup-command: generate:spec
       package-name: "@${{ github.repository }}-client"
       package-registry: https://npm.pkg.github.com
-      package-version: ${{ github.event.release.tag_name }}
+      package-version: ${{ github.event.release.tag_name || inputs.version }}
     if: github.event_name == 'release' && github.event.action == 'published'
