--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -30,4 +30,4 @@ jobs:
     uses: pukenicorn/gh-workflows/.github/workflows/dependabot.yml@main
     with:
       pr-number: ${{ inputs.pr_number }}
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
