implement own scraper

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.95.0"
 uvicorn = "^0.21.1"
 taskipy = "^1.10.4"
 pyyaml = "^6.0"
+cloudscraper = "^1.2.71"
 
 [tool.poetry.group.dev.dependencies]
 
